// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login> renders the Login content 1`] = `
<div
  className="login"
>
  <HelmetWrapper
    encodeSpecialCharacters={true}
    title="Login"
  />
  <div
    className="header"
  >
    <button
      className="icnCloseOff"
      onClick={[Function]}
    />
    <div
      className="title"
    >
      LOGIN
    </div>
  </div>
  <form
    className="loginForm"
    id="loginForm"
    onSubmit={[Function]}
  >
    <Field
      component={[Function]}
      id="usernameInput"
      label="Email"
      name="usernameInput"
      type="email"
    />
    <Field
      component={[Function]}
      id="passwordInput"
      label="Password"
      name="passwordInput"
      type="password"
    />
    <Link
      replace={false}
      to="/?reset-password=true"
    >
      <div
        className="forgotPassword"
      >
        Forgot Password?
      </div>
    </Link>
    <div
      className="error"
    />
    <button
      className="submit"
      disabled={false}
      type="submit"
    >
      Login
    </button>
  </form>
</div>
`;

exports[`<Login> renders when form is submitting 1`] = `
<div
  className="login"
>
  <HelmetWrapper
    encodeSpecialCharacters={true}
    title="Login"
  />
  <div
    className="header"
  >
    <button
      className="icnCloseOff"
      onClick={[Function]}
    />
    <div
      className="title"
    >
      LOGIN
    </div>
  </div>
  <form
    className="loginForm"
    id="loginForm"
    onSubmit={[Function]}
  >
    <Field
      component={[Function]}
      id="usernameInput"
      label="Email"
      name="usernameInput"
      type="email"
    />
    <Field
      component={[Function]}
      id="passwordInput"
      label="Password"
      name="passwordInput"
      type="password"
    />
    <Link
      replace={false}
      to="/?reset-password=true"
    >
      <div
        className="forgotPassword"
      >
        Forgot Password?
      </div>
    </Link>
    <div
      className="error"
    />
    <button
      className="submit"
      disabled={true}
      type="submit"
    >
      Submitting...
    </button>
  </form>
</div>
`;
